# SynthSSL

./: .gitignore  DESIGN.md  DOWNLOAD.md  README.md  check.py  pyproject.toml  questions.md  simulator.md
SSL/: eval.py  online_probe.py  show_recon.py  supervised.py  train.py  train_equiv.py
scripts/: audit_coverage.py  build_hierarchy.py  generate_clean.py  generate_large.py  generate_probes.py  generate_small.py  generate_xlarge.py  inventory_backgrounds.py
src/SynthSSL/: __init__.py  generate.py  hierarchy.json  labels.py  objects.py  scene.py  utilities.py
